--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- comment /-->
   <link rel = "stylesheet" href="project1.css" />
   <link rel="icon" href="http://icons.iconarchive.com/icons/icons8/windows-8/32/Cultures-Star-Crescent-icon.png" type= "image/png"  sizes= "16x16" />
   <title>
