--- a/Decision2.html
+++ b/Decision2.html
@@ -13,7 +13,7 @@ Text Adventure Project /-->
 	<body>
     <div style = "width: 100%">
 			<div id = "ex3">
-				<a href="#"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/home-icon.png"
+				<a href="index.html"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/home-icon.png"
 					alt = "Home Page Icon"/>
 				</a>
 				INDEX
@@ -26,7 +26,7 @@ Text Adventure Project /-->
 			</div>
 			<div id = "bottom">
 				<div id = "ex2">
-					<a href="#"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/button-round-start-icon.png"
+					<a href="index.html"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/button-round-start-icon.png"
 						alt = "Back Page Icon"/>
 					</a>
 					BACK
@@ -38,21 +38,19 @@ Text Adventure Project /-->
 					<div style= "width: 60%; float: left">
 						<h1>The Story</h1>
 						<p>
-							Its the year 3050. With the new discovery of Stagithite, fossil
-							fuels such as coal and petroleum died out in the mid 2000s.
-							Stagithite is a metal that produces unimaginable amounts of power,
-							revolutionizing technology to new heights. Unfortuently we are
-							at an all time low of Stragithite. No new metal discoveries compare,
-							leaving the government in a panic.<br> You are captain of the
-							Zarconia space ship, and the goverment has employed you to set out
-							on mission to other galaxies to find more Stagithite.
+							You tell your Mom and Dad about an unexpected mission, leaving
+							your mother in tears. Your girlfriend walks into the room in shock
+							after overhearing your converstaion with your parents. You begin
+							to explain to her that this mission is for an unknown amount of
+							time and you may not even return. Knowing how unfair this
+							situation is, you break it off with her and tell her not to wait
+							for you. She starts sobbing and runs into the other room.
 						</p>
 					</div>
 					<div style= "width: 40%: float left">
-						<div>You leave immediately with onto your mission in high
-							patriotic spirit.</div>
+						<div>The government calls you and tells you to start the mision.</div>
 						<div class = "opac">
-							<a href="Decision1.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
+							<a href="Decision2a.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
 								alt = "Decision One Page Icon"/>
 							</a>
 						</div>
@@ -61,10 +59,10 @@ Text Adventure Project /-->
 							alt = "Rainbow Star gif"/>
 					</div>
 					<div>
-						You go home to tell your family and girlfried you will be gone for
-						an unknown amount of time, dissapointed with your new mission.
+						Saddened by the situation, you remain strong knowing that a clean
+						break is best and decide to start your mission.
 					</div>
-					<a href="Decision2.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
+					<a href="Decision2b.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
 						alt = "Decision Two Page Icon"/>
 					</a>
 				</div>
