--- a/Decision1a.html
+++ b/Decision1a.html
@@ -13,7 +13,7 @@ Text Adventure Project /-->
 	<body>
     <div style = "width: 100%">
 			<div id = "ex3">
-				<a href="#"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/home-icon.png"
+				<a href="index.html"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/home-icon.png"
 					alt = "Home Page Icon"/>
 				</a>
 				INDEX
@@ -26,7 +26,7 @@ Text Adventure Project /-->
 			</div>
 			<div id = "bottom">
 				<div id = "ex2">
-					<a href="#"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/button-round-start-icon.png"
+					<a href="Decision1.html"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/button-round-start-icon.png"
 						alt = "Back Page Icon"/>
 					</a>
 					BACK
@@ -38,21 +38,21 @@ Text Adventure Project /-->
 					<div style= "width: 60%; float: left">
 						<h1>The Story</h1>
 						<p>
-							Its the year 3050. With the new discovery of Stagithite, fossil
-							fuels such as coal and petroleum died out in the mid 2000s.
-							Stagithite is a metal that produces unimaginable amounts of power,
-							revolutionizing technology to new heights. Unfortuently we are
-							at an all time low of Stragithite. No new metal discoveries compare,
-							leaving the government in a panic.<br> You are captain of the
-							Zarconia space ship, and the goverment has employed you to set out
-							on mission to other galaxies to find more Stagithite.
+							Oh no! You did not notice the floating asteroids surrounding the
+							planet. You try to manouver around them, but you end up getting hit.
+							Your emergency lights turn on. Unfortuently you are so far into
+							the cluster of asteroids that your only hope of survival is landing
+							onto the unknow planet. You try your best to land but your rockets
+							are not working, causing you to crash onto the planet, and pass out.
 						</p>
 					</div>
 					<div style= "width: 40%: float left">
-						<div>You leave immediately with onto your mission in high
-							patriotic spirit.</div>
+						<div>
+							You wake up alone inside your ship, seeing emergency lights
+							flashing. You decide to go check out your ship.
+						</div>
 						<div class = "opac">
-							<a href="Decision1.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
+							<a href="Decision1aa.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
 								alt = "Decision One Page Icon"/>
 							</a>
 						</div>
@@ -61,10 +61,11 @@ Text Adventure Project /-->
 							alt = "Rainbow Star gif"/>
 					</div>
 					<div>
-						You go home to tell your family and girlfried you will be gone for
-						an unknown amount of time, dissapointed with your new mission.
+						Suddenly you begin to wake up. As your eyes begin to adjust you do
+						not recognize your surroundings and realize you are no longer in your
+						ship.
 					</div>
-					<a href="Decision2.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
+					<a href="Decision1ab.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
 						alt = "Decision Two Page Icon"/>
 					</a>
 				</div>
