--- a/Decision1abbb.html
+++ b/Decision1abbb.html
@@ -26,7 +26,7 @@ Text Adventure Project /-->
 			</div>
 			<div id = "bottom">
 				<div id = "ex2">
-					<a href="Decision1a.html"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/button-round-start-icon.png"
+					<a href="Decision1abb.html"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/72/button-round-start-icon.png"
 						alt = "Back Page Icon"/>
 					</a>
 					BACK
@@ -38,19 +38,18 @@ Text Adventure Project /-->
 					<div style= "width: 60%; float: left">
 						<h1>The Story</h1>
 						<p>
-							You notice that you are in a village, and not alone. Aliens are
-							surrounding you. You see a beautiful female arguing with what
-							looked like the village cheif. The female comes towards you and
-							starts dragging you behind her.
+							She doen't beleive you, however you trust her enough to tell her
+              the truth. She beleives you, and tells you that the villagers wouldn't be
+              happy that earth was trying to steal their Stagethite. However,
+              because they did not use the rock, they may trade with Earth.
 						</p>
 					</div>
 					<div style= "width: 40%: float left">
 						<div>
-							You arrive at a hut where you are tied up to a chair. You try to
-              speak with her.
+							The Story is to be continued...
 						</div>
 						<div class = "opac">
-							<a href="Decision2aa.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
+							<a href="Decision1end.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
 								alt = "Decision One Page Icon"/>
 							</a>
 						</div>
@@ -59,9 +58,9 @@ Text Adventure Project /-->
 							alt = "Rainbow Star gif"/>
 					</div>
 					<div>
-					You arrive at a hut where you are tied up to a chair. You remain quiet.
+							The Story is to be continued...
 					</div>
-					<a href="Decision1abb.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
+					<a href="Decision1end.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
 						alt = "Decision Two Page Icon"/>
 					</a>
 				</div>
