--- a/Decision2end.html
+++ b/Decision2end.html
@@ -38,9 +38,11 @@ Text Adventure Project /-->
 					<div style= "width: 60%; float: left">
 						<h1>The Story</h1>
 						<p>
-							As soon as you open the hut, you start sprinting. Suddenly, you
-							feel pain in your back. You look down and a spear has pierced
-							you. Suddenly you feel cold. You collapse and see darkness.
+							You talk with the cheif and devise a treaty for you to bring
+							back to earth, in order to discuss with the government. They help
+							fix your ship and you finally got back to earth. The government
+							gives you a metal of honor. The treaty is signed and now Earth
+							has enough Stagethite to last them thousands of years!
 						</p>
 					</div>
 
