--- a/Decision1aaab.html
+++ b/Decision1aaab.html
@@ -41,12 +41,14 @@ Text Adventure Project /-->
 							She doen't beleive you, however you trust her enough to tell her
               the truth. She beleives you, and tells you that the villagers wouldn't be
               happy that earth was trying to steal their Stagethite. However,
-              because they did not use the rock, they may trade with Earth.
+              because they did not use the rock, they may trade with Earth. She
+							unties you and tells you to go with her to talk to the cheif.
 						</p>
 					</div>
 					<div style= "width: 40%: float left">
 						<div>
-							The Story is to be continued...
+							 As soon as she unites you, you break free and run off to get to
+							 your ship.
 						</div>
 						<div class = "opac">
 							<a href="Decision1end.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
@@ -58,9 +60,9 @@ Text Adventure Project /-->
 							alt = "Rainbow Star gif"/>
 					</div>
 					<div>
-							The Story is to be continued...
+							You go with the her and talk to the cheif. 
 					</div>
-					<a href="Decision1end.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
+					<a href="Decision2end.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
 						alt = "Decision Two Page Icon"/>
 					</a>
 				</div>
