--- a/Decision1bbba.html
+++ b/Decision1bbba.html
@@ -38,15 +38,15 @@ Text Adventure Project /-->
 					<div style= "width: 60%; float: left">
 						<h1>The Story</h1>
 						<p>
-							She doen't beleive you, however you trust her enough to tell her
-              the truth. She beleives you, and tells you that the villagers wouldn't be
-              happy that earth was trying to steal their Stagethite. However,
-              because they did not use the rock, they may trade with Earth.
+							She beleives you, and tells you that the villagers wouldn't be
+							happy that earth was trying to steal their Stagethite. However,
+							because they did not use the rock, they may trade with Earth.
 						</p>
 					</div>
 					<div style= "width: 40%: float left">
 						<div>
-							The Story is to be continued...
+							As soon as she unites you, you break free and run off to get to
+							your ship.
 						</div>
 						<div class = "opac">
 							<a href="Decision1end.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
@@ -58,7 +58,7 @@ Text Adventure Project /-->
 							alt = "Rainbow Star gif"/>
 					</div>
 					<div>
-							The Story is to be continued...
+								You go with her and talk to the cheif.
 					</div>
 					<a href="Decision1end.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
 						alt = "Decision Two Page Icon"/>
