--- a/Decision1bbbb.html
+++ b/Decision1bbbb.html
@@ -46,7 +46,8 @@ Text Adventure Project /-->
 					</div>
 					<div style= "width: 40%: float left">
 						<div>
-							The Story is to be continued...
+							As soon as she unites you, you break free and run off to get to
+							your ship.
 						</div>
 						<div class = "opac">
 							<a href="Decision1end.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
@@ -58,7 +59,7 @@ Text Adventure Project /-->
 							alt = "Rainbow Star gif"/>
 					</div>
 					<div>
-							The Story is to be continued...
+								You go with her and talk to the cheif.
 					</div>
 					<a href="Decision1end.html" class="ui-btn"><img src = "http://icons.iconarchive.com/icons/double-j-design/super-mono-3d/48/arrow-right-icon.png"
 						alt = "Decision Two Page Icon"/>
